# Stark-home

./: .gitignore  DESIGN_PLAN.md  HOMEBREW.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
Casks/: stark.rb
apps/main/: codex.ts  index.ts  installer.ts  ipc.ts  sidecar.ts  tray.ts
apps/preload/: index.ts
apps/renderer/: index.html
apps/renderer/src/: app.tsx  global.d.ts  main.tsx  styles.css
apps/renderer/src/components/: ActionCard.tsx  CommandPalette.tsx  FloatingMascot.tsx  InlineProfileSwitcher.tsx  KeyboardShortcuts.tsx  Logo.tsx  Markdown.tsx  Mascot.tsx  ProfilePicker.tsx  ShortcutsDialog.tsx  Sidebar.tsx  StarkHouse.tsx  StatusBar.tsx  TitleBar.tsx
apps/renderer/src/components/stark-home/: StarkHomeCanvas.tsx  renderers.ts  scene.ts  (+2 more)
apps/renderer/src/lib/: confirmDelete.ts  daemon.ts  export.ts  rpc.ts  stark-shim.ts  time.ts  tts.ts  voice.ts
apps/renderer/src/stores/: session.ts  theme.ts
apps/shared/: rpc.ts
scripts/: render-icon.mjs  stark-sprite.mjs  update-cask.sh
sidecar/: pyproject.toml
sidecar/hermes_home/: __init__.py  __main__.py
sidecar/hermes_home/bridge/: acp_client.py  app.py  auth.py  gateway_probe.py  hermes_cli.py  hermes_paths.py  rate_limit.py  store.py  subprocess_env.py  validation.py
sidecar/hermes_home/bridge/routes/: backends.py  chat.py  daemon.py  doctor.py  gateways.py  home.py  mcp.py  memory.py  profiles.py  providers.py  scheduler.py  sessions.py  settings.py  skills.py  system.py
sidecar/scripts/: build_runtime.sh
(+26 files in other folders)
